--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,5 +1,3 @@
-name: CI
-
 on:
   push:
     branches: [ master ]
@@ -13,11 +11,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup .NET Core
-      uses: actions/setup-dotnet@v1
+      uses: actions/setup-dotnet@v1.7.2
       with:
-        dotnet-version: '5.x'
+        dotnet-version: 5.0.x
     - name: Install dependencies
       run: dotnet restore
     - name: Build solution and run tests
       run: dotnet test
-
