--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -39,6 +39,9 @@
     <NoWarn />
     <WarningsAsErrors>41999,42016,42017,42018,42019,42020,42021,42022,42032,42036</WarningsAsErrors>
   </PropertyGroup>
+  <ItemGroup>
+    <Compile Remove="My Project\MySettingsProperty.vb" />
+  </ItemGroup>
 
   <ItemGroup>
     <Import Include="System.Data" />
