--- a/CSharpToVB/CSharpToVB.vbproj
+++ b/CSharpToVB/CSharpToVB.vbproj
@@ -25,8 +25,8 @@
     <Product>CSharp To VB Converter</Product>
     <Copyright>Copyright (c) .NET Foundation and Contributors</Copyright>
     <PackageId>CSharp To VB Converter</PackageId>
-    <AssemblyVersion>5.0.0.29</AssemblyVersion>
-    <FileVersion>5.0.0.29</FileVersion>
+    <AssemblyVersion>5.0.1.1</AssemblyVersion>
+    <FileVersion>5.0.1.0</FileVersion>
     <Version>5.0.0.29</Version>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
@@ -87,8 +87,11 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Update="Assets\BigFace.xml">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    <None Update="Assets\DarkModeColorDictionary.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="Assets\LightModeColorDictionary.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
