--- a/CSharpToVB/App.config
+++ b/CSharpToVB/App.config
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-      <section name="CSharpToVBApp.MySettings" type="System.Configuration.ClientSettingsSection, System.Configuration.ConfigurationManager, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System.Configuration.ConfigurationManager, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" >
+        <section name="CSharpToVBApp.My.MySettings" type="System.Configuration.ClientSettingsSection, System.Configuration.ConfigurationManager, Version=5.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
   <userSettings>
-    <CSharpToVBApp.MySettings>
+    <CSharpToVBApp.My.MySettings>
       <setting name="ColorizeInput" serializeAs="String">
         <value>False</value>
       </setting>
@@ -79,6 +79,6 @@
       <setting name="TSFindWhat" serializeAs="String">
         <value />
       </setting>
-    </CSharpToVBApp.MySettings>
+    </CSharpToVBApp.My.MySettings>
   </userSettings>
 </configuration>
